--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -602,7 +602,7 @@
             <a href="/index" class="nav-link active">Personal notes</a>
             <a href="/group-notes" class="nav-link">Group notes</a>
         </nav>
-        <input type="text" id="mobile-search-input" placeholder="Search notes...">
+        <input type="text" id="mobile-search-input" placeholder="Search notes..." autocomplete="off">
         <div id="profile-pic" class="profile-pic no-picture"></div>
     </header>
     
