--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Future Notes: A modern app for organizing your thoughts, plans, and ideas. Access notes anywhere and stay productive.">
     <meta name="keywords" content="Notes App, Future Notes, Productivity App, Organize Thoughts, Notes on Windows">
     <meta name="author" content="Nathan Cappellen">
+    <meta name="google-site-verification" content="cbcPf7OinAwmP9GdiajNqU6PO60TCp2A44VOHu3N3T8" />
     <title>Future Notes - Homepage</title>
     <link rel="canonical” href="https://bosbes.eu.pythonanywhere.com/">
     <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
