--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -384,7 +384,7 @@
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            background-color: #4a4a4a;
+            background-color: #3a3a3a;
             color: #e0e0e0;
             display: flex;
             justify-content: center;
@@ -602,7 +602,9 @@
             <a href="/index" class="nav-link active">Personal notes</a>
             <a href="/group-notes" class="nav-link">Group notes</a>
         </nav>
+        <input type="password" style="position: absolute; left: -9999px; opacity: 0;">
         <input type="text" id="mobile-search-input" placeholder="Search notes..." autocomplete="off">
+
         <div id="profile-pic" class="profile-pic no-picture"></div>
     </header>
     
