--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -308,6 +308,9 @@
     #calendar-container::-webkit-scrollbar {
         display: none;
     }
+    body::-webkit-scrollbar {
+      display: none;
+    }
     /* Main calendar area */
     #calendar-main {
       flex: 1;
